packages/typ/tests/fixtures/diagnostics/0773_polyvar_branch_result_mismatch_02.ml
let use_beta = function
  | `A (x : int) -> x
  | `B (y : bool) -> y
